initial font and listings settings for clojure, scheme, pseudocode.

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5617,6 +5617,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Dual_graph},
 }
 
+@online{wiki:FirstClassValue,
+    author = {{Wikipedia}},
+    title = {First-class citizen},
+    url = {https://en.wikipedia.org/w/index.php?title=First-class_citizen},
+  }
+  
 @Online{wiki:FirstOrderLogic,
   author = {Wikipedia},
   title  = {First-order logic},
