--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3576,6 +3576,9 @@ RawFeature={
 }, 
 ]
 
+% same font as clojure, for now.
+\NewDocumentCommand {\javaFont} {} {\clojureFont}
+
 \newfontfamily\schemeFont{NewCMMono10}[
 Path= c:/windows/fonts/ ,
 Extension=.otf,
