columns=fullflexible for pseudocode listings

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4041,10 +4041,9 @@ and no access to mantissa or exponent is necessary.
 }
 
 @Book{Rathore:2011:Clojure,
-  author    = {Rathore, A.},
+  author    = {Amit Rathore},
   title     = {Clojure in Action},
-  publisher = {Manning Publications},
-  series    = {Manning Pubs Co Series},
+  publisher = {Manning},
   year      = {2011},
 }
 
