--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4626,6 +4626,7 @@ backref=true,
 \RequirePackage{listings}[2020/03/24]
 
 \lstset{%
+keepspaces=true,%
 backgroundcolor={\color{GhostWhite}},
 captionpos=b,
 %frame=tblr,
@@ -4633,6 +4634,7 @@ captionpos=b,
 
 %-----------------------------------------------------------------
 \lstdefinelanguage{clojure}{%
+keepspaces=true,%
 basicstyle=\clojureFont,
 breaklines=false,
 mathescape=true,
@@ -4775,6 +4777,7 @@ zipmap
   commentstyle=\color[rgb]{0.133,0.545,0.133},
   stringstyle={\color[rgb]{0.75,0.49,0.07}},
   upquote=true,
+keepspaces=true,%
   %breaklines=true,
   %breakatwhitespace=true,
   %literate=*{`}{{`}}{1},
@@ -4784,7 +4787,7 @@ zipmap
 %-----------------------------------------------------------------
 \lstdefinelanguage{pseudocode}{
   morekeywords=[1]{def,defn, fn, and, or, map, reduce,},
-  morekeywords=[2]{cond, do, else, for-each, if, let*, let, eval, },
+  morekeywords=[2]{cond, do, else, for-each, if, let, eval, apply},
   alsodigit=!\$\%&*+-./:<=>?@^_~,
   sensitive=true,
   breaklines=false,
@@ -4794,7 +4797,8 @@ zipmap
   keywordstyle=\pseudocodeFont\color{Sepia},
   commentstyle=\color[rgb]{0.133,0.55,0.133},
   stringstyle={\color[rgb]{0.75,0.5,0.07}},
-  columns=flexible,
+  columns=fullflexible,
+  keepspaces=true,%
  }
 %-----------------------------------------------------------------
 % cross references / hyperlinks
