--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -850,6 +850,12 @@ year={1954},
   year      = {1989},
 }
 
+@online{Clojure:Destructuring,
+author={{clojure.org}},
+title={Destructuring in Clojure},
+url={https://clojure.org/guides/destructuring},
+}
+
 @Online{Clojuredocs:2012,
   author = {{{ClojureDocs} community}},
   title  = {clojuredocs.org},
