\geomHalfDTV slightly smaller; some more refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5018,6 +5018,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
     "https://en.wikipedia.org/w/index.php?title=Argument_from_authority",
   }
   
+@Online{wiki:SIUnits,
+  author = {Wikipedia},
+    title = {International System of Units},
+    url = {https://en.wikipedia.org/w/index.php?title=International_System_of_Units},
+    }
+    
 @Online{wiki:LieGroup,
   author = {Wikipedia},
   title  = {Lie group},
@@ -5035,6 +5041,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   title  = {Pairwise summation},
   url    = {https://en.wikipedia.org/w/index.php?title=Pairwise_summation},
 }
+
+@online{wiki:UnitOfMeasurement,
+    author = {Wikipedia},
+    title = {Unit of measurement},
+    url = {https://en.wikipedia.org/w/index.php?title=Unit_of_measurement},
+  }
 
 @Online{wiki:CardinalNumbers,
   author = {Wikipedia},
