--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -111,13 +111,14 @@
 \NewDocumentCommand {\geomHDTV} {} {
  \geomDefault
  \geometry{margin=2cm,paperheight=352mm,paperwidth=198mm,} }
+
 % roughly half a screen, intended for
-% single column portrait, either occupying half the screen or
+% single column portrait, either occupying 1/3 to 1/2 the screen or
 % 2 page side by side full screen.
 \NewDocumentCommand {\geomHalfDTV} {} {
  \hypersetup{pdfpagelayout=TwoPageLeft,}
  \geomDefault
- \geometry{margin=2cm,paperheight=272mm,paperwidth=224mm,} }
+ \geometry{margin=2cm,paperheight=244mm,paperwidth=202mm,} }
 
 % rough size and aspect for traditional math books
 % TODO: margins should be bigger and two-sided assymetric
