--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -425,7 +425,7 @@ publisher = "BIS Publishers",
   year      = {1985},
 }
 
-@Book{BishopCheng:1972:ConstructiveMeasureTHeory,
+@Book{BishopCheng:1972:ConstructiveMeasureTheory,
   author    = {Errett Bishop and Henry Cheng},
   title     = {Constructive Measure Theory},
   publisher = {American Mathematical Society},
@@ -3807,6 +3807,12 @@ author = {Gerrit Noordzij and Robin Kinross},
   title     = {Formal Languages in Logic: A Philosophical and Cognitive Analysis},
   publisher = {Cambridge U Press},
   year      = {2012},
+}
+
+@online{Occil:2021:NumbersJava,
+author={Peter Occil},
+title={numbers-java},
+url={https://github.com/peteroupc/numbers-java},
 }
 
 @Book{ONeill:1966:DifferentialGeom,
