--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4901,6 +4901,8 @@ citecolor=citecolor,
 \Crefname{paragraph}{Section}{Sections}
 \crefname{subparagraph}{section}{sections}
 \Crefname{subparagraph}{Section}{Sections}
+% get rid of () in equation refereneces
+\creflabelformat{equation}{#2\textup{#1}#3}
 
 %-----------------------------------------------------------------
 % plChunk environments using tcolorbox
