--- a/shared/spaces.tex
+++ b/shared/spaces.tex
@@ -150,7 +150,7 @@ which implies that
  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$
 is linearly dependent iff some $\Vector{v}_k, \; 1 \leq n-1$, 
 is a linear combination of the preceding 
-ones \citeAuthorYearTitle[Section 6]{Halmos:1958:Finite}.}{linearDependenceTHeorem}
+ones \citeAuthorYearTitle[Section 6]{Halmos:1958:Finite}.}{linearDependenceTheorem}
 \textsc{Proof:}
 Assume  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$ are linearly dependent.
 Consider the smallest $k$ such that 
