--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3058,15 +3058,15 @@ StylisticSet={
 % TODO: rationalize serif/sans/mono/fraktur/etc dimensions
 % TODO: \setBlackLetterFont?
 %-----------------------------------------------------------------
-% QTHeidelbergType 
+% QTheidelbergType 
 % https://ctan.org/pkg/qualitype
 % Version 2019-12-26
 % Licenses  GNU General Public License, version 2 or newer
 % The SIL Open Font License
 % Copyright 1992 Qualitype
 
-\NewDocumentCommand {\QTHeidelbergBlackLetterFont} {} {
-\newfontfamily\BlackLetterFont{QTHeidelbergType}[
+\NewDocumentCommand {\QTheidelbergBlackLetterFont} {} {
+\newfontfamily\BlackLetterFont{QTheidelbergType}[
 Path= c:/windows/fonts/ ,
 Extension=.otf,
 Ligatures={Common,TeX},
@@ -3708,7 +3708,7 @@ RawFeature={
  % Optima -> Classico -> Biolinum -> Libertinus Sans
 \LibertinusSansFont
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \AsanaMathFont
 }
   
@@ -3716,7 +3716,7 @@ RawFeature={
 \CormorantMainFont
 \YsabeauSansFont
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \GaramondMathFont
 }
 
@@ -3726,7 +3726,7 @@ RawFeature={
 %\GilliusADFTwoSansFont
 \AtkinsonHyperlegibleSansFont
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \GaramondMathFont
 }
 
@@ -3734,7 +3734,7 @@ RawFeature={
 \ErewhonMainFont
 \LatinModernSansFont
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \ErewhonMathFont
 }
 
@@ -3743,7 +3743,7 @@ RawFeature={
 \FiraGoMainFont
 \FiraGoSansFont
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \FiraMathFont
 }
 
@@ -3757,7 +3757,7 @@ RawFeature={
 \GFSNeohellenicSansFont
 %% no GFS mono font?
 \FiraCodeMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \GFSNeohellenicMathFont
 }
 
@@ -3765,7 +3765,7 @@ RawFeature={
 \KpRomanMainFont
 \KpSansSansFont
 \KpMonoMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \KpMathMathFont
 }
 
@@ -3773,7 +3773,7 @@ RawFeature={
 \LatinModernMainFont
 \LatinModernSansFont
 \LatinModernMonoFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 \LatinModernMathFont
 }
 
@@ -3782,7 +3782,7 @@ RawFeature={
 \AtkinsonHyperlegibleSansFont
 \FiraCodeMonoFont
 \LegibleMathFont 
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 \NewDocumentCommand {\LibertinusFonts} {} {
 % TODO: Libertinus Serif Display as title font?
@@ -3791,7 +3791,7 @@ RawFeature={
 \LibertinusSansFont
 \LibertinusMonoFont
 \LibertinusMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 \NewDocumentCommand {\NewComputerModernFonts} {} {
@@ -3799,7 +3799,7 @@ RawFeature={
 \NewComputerModernSansFont
 \NewComputerModernMonoFont
 \NewComputerModernMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 %-----------------------------------------------------------------
@@ -3813,7 +3813,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \BonumMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 % ok: 
@@ -3824,7 +3824,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \PagellaMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 % pagella > schola > bonum
@@ -3835,7 +3835,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \ScholaMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 % termes ~ pagella > schola > bonum
@@ -3846,7 +3846,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \TermesMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 %-----------------------------------------------------------------
@@ -3855,7 +3855,7 @@ RawFeature={
 \GilliusADFTwoSansFont
 \FiraCodeMonoFont
 \XITSMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 
 \NewDocumentCommand {\STIXTwoFonts} {} {
@@ -3863,7 +3863,7 @@ RawFeature={
 \GilliusADFTwoSansFont
 \FiraCodeMonoFont
 \STIXTwoMathFont
-\QTHeidelbergBlackLetterFont
+\QTheidelbergBlackLetterFont
 }
 %-----------------------------------------------------------------
 % main fonts
