--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1385,8 +1385,7 @@ extensionally or intensionally.},
   series    = {Studies in Logic and the Foundations of Mathematics},
   volume    = {97},
   abstract  = {Dedicated to the memory of my friend and colleague, 
-Karel de Leeuw.
-Text of lectures presented at Logic Colloquium 78
+  Text of lectures presented at Logic Colloquium 78
 (U of Mons, Belgium, August 24-September 1, 1978). 
 I am indebted to the organizers of this conference for proposing 
 the lectures and for their helpful assistance in many ways. 
@@ -1954,11 +1953,17 @@ url={https://dspace.mit.edu/handle/1721.1/6060},
   title={Software Design for Flexibility},
   subtitle={How to Avoid Programming Yourself Into a Corner},
   author={Hanson, Chris and Sussman, Gerald Jay},
-  url={https://books.google.com/books?id=AOUbEAAAQBAJ},
   year={2021},
   publisher={MIT Press},
   url={https://mitpress.mit.edu/books/software-design-flexibility},
   note={haven't found free html or pdf versions yet},
+}
+
+@online{HansonSussman:2021:SDFFSource,
+  title={Source code for {Software Design for Flexibility}},
+  author={Hanson, Chris and Sussman, Gerald Jay},
+  year={2021},
+  url={http://groups.csail.mit.edu/mac/users/gjs/sdf.tar.gz},
 }
 
 
