--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5018,7 +5018,7 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   }
 @online{wiki:ArgumentFromAnalogyFalse,
     author = "{Wikipedia}",
-    title = "Argument from analogy",
+    title = "False analogy",
     url = 
     "https://en.wikipedia.org/wiki/Argument_from_analogy#False_analogy",
   }
@@ -5028,6 +5028,18 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
     url = 
     "https://en.wikipedia.org/w/index.php?title=Argument_from_authority",
   }
+  
+@online{wiki:Checkers,
+    author = "{Wikipedia}",
+    title = "Draughts",
+    url = "https://en.wikipedia.org/w/index.php?title=Draughts",
+  }  
+  
+@online{wiki:ChessVariants,
+    author = "{Wikipedia}",
+    title = "List of chess variants",
+    url = "https://en.wikipedia.org/w/index.php?title=List_of_chess_variants",
+    }
   
 @Online{wiki:SIUnits,
   author = {Wikipedia},
