--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5040,7 +5040,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
     title = "List of chess variants",
     url = "https://en.wikipedia.org/w/index.php?title=List_of_chess_variants",
     }
-  
+@online{wiki:CodeSmell,
+    author = "{Wikipedia}",
+    title = "Code smell",
+    url = "https://en.wikipedia.org/w/index.php?title=Code_smell",
+  }  
 @Online{wiki:SIUnits,
   author = {Wikipedia},
     title = {International System of Units},
