--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3071,6 +3071,18 @@ year=1998
   year      = {1990},
 }
 
+@article{ManzyukEtAl:2019:PerturbationConfusion,
+   title={Perturbation confusion in forward automatic differentiation of higher-order functions},
+   volume={29},
+   url= {http://arxiv.org/abs/1211.4892},
+   journal={Journal of Functional Programming},
+   publisher={Cambridge University Press (CUP)},
+   author={Manzyuk, Oleksandr and Pearlmutter, Barak A. and 
+   Radul, Alexey Andreyevich and Rush, David R. and 
+   Sisskind, Jeffrey Mark},
+   year={2019},
+   }
+
 @TechReport{MarinSmith:1990:ODRSplines,
   author      = {Samuel Marin and Philip Smith},
   institution = {General Motors Research Laboratories},
@@ -4484,6 +4496,17 @@ note = { Transcript at
   year    = {1987},
 }
 
+@online{SiskindPearlmutter:2005:PerturbationConfusion,
+title={Perturbation Confusion and Referential
+Transparency:
+Correct Functional Implementation of Forward-Mode {AD}},
+author={Jeffrey Mark Siskind and Barak A. Pearlmutter},
+year={2005},
+url={http://www.bcl.hamilton.ie/~barak/publications.html#confs},
+note={Draft Proceedings of the 17th International Workshop 
+on Implementation and Application of Functional Languages (IFL2005), 
+Sep 19-21, 2005, Dublin Ireland.},
+}
 @Book{SmithEtal:1976:EISPACK,
   author    = {Smith, B .T. and Boyle, J. M. and Dongarra, J .J. and Garbow, B. S. and Ikebe, Y. and Klema, V. C. and Moler, C. B.},
   title     = {Matrix Eigensystem Routines---{EISPACK} Guide, $2$nd~edition},
