--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5594,6 +5594,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Turing_(programming_language)},
 }
 
+@online{wiki:UniversalAlgebra,
+    author = "{Wikipedia}",
+    title = "Universal algebra",
+    url = "https://en.wikipedia.org/w/index.php?title=Universal_algebra",
+    }
+    
 @Online{wiki:Urelement,
   author = {Wikipedia},
   title  = {Urelement},
