--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3190,6 +3190,7 @@ StylisticSet={
 }
 %-----------------------------------------------------------------
 % https://github.com/YuanshengZhao/Garamond-Math
+% Ver. 2019-08-16
 % OFL-1.1 License
 % 2021-03-01
 
