--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -46,6 +46,48 @@
   year      = {1994},
 }
 
+@online{AdamsHanson:2020:MITSchemeUser,
+title={{MIT/GNU Scheme User’s Manual
+for release 11.2}},
+year={2020},
+month={6},
+day={16},
+author={Stephen Adams and Chris Hanson and {the MIT Scheme Team}},
+url={https://www.gnu.org/software/mit-scheme/},
+}
+
+@online{Hanson:2020:MITSchemeRef,
+title={{MIT/GNU Scheme Refereence Manual
+for release 11.2}},
+year={2020},
+month={6},
+day={16},
+author={Chris Hanson and {the MIT Scheme Team} and
+{a cast of thousands}},
+url={https://www.gnu.org/software/mit-scheme/},
+}
+
+@online{Hanson:2011:MITSchemeSOS,
+title={{The SOS Reference Manual
+Edition 2.13 for SOS 1.9}},
+year={2011},
+month=10},
+day={14},
+author={Chris Hanson},
+url={https://www.gnu.org/software/mit-scheme/},
+}
+
+@online{Birkholz:2018:MITSchemeSOS,
+title={{The FFI Reference Manual
+a Foreign Function Interface (version 1.0)
+for MIT/GNU Scheme version 9.0.1}},
+year={2018},
+month=6},
+day={10},
+author={Matt Birkholz},
+url={https://www.gnu.org/software/mit-scheme/},
+}
+
 @Online{JavaCompilerAPI:2006,
   author = {Peter {von der Ahe}},
   title  = {JSR 199: Java Compiler API},
