--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4046,6 +4046,14 @@ and no access to mantissa or exponent is necessary.
   year      = {1986},
 }
 
+@Book{PressEtal:2007:NumericalRecipes,
+  author    = {William H. Press and Saul A. Teukolsky and William T. Vetterling and Brian P. Flannery},
+  title     = {Numerical Recipes},
+  edition = {3rd edition},
+  publisher = {Cambridge U Press},
+  year      = {2007},
+}
+
 @Book{PressEtal:1988:NumericalRecipesC,
   author    = {William H. Press and Saul A. Teukolsky and William T. Vetterling and Brian P. Flannery},
   title     = {Numerical Recipes in {C}},
@@ -5648,6 +5656,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Urelement},
 }
 
+@online{wiki:VerletIntegration,
+    author = "{Wikipedia}",
+    title = "Verlet integration",
+    url = "https://en.wikipedia.org/w/index.php?title=Verlet_integration",
+  }
 @Online{wiki:VonNeumannUniverse,
   author = {Wikipedia},
   title  = {Von Neumann universe},
