--- a/shared/numbers.tex
+++ b/shared/numbers.tex
@@ -35,7 +35,7 @@ recreate again the entire existing number-domain through each
 of these operations, or otherwise
 said: the requirement of the unconditional possibility 
 of carrying through the indirect,
-inverse operations of substraction, division, etc., 
+inverse operations of subtraction, division, etc., 
 makes it necessary to create new classes of
 numbers, since with the original sequence 
 of the absolute integers that requirement cannot be
@@ -316,6 +316,7 @@ as a subset of
 Alternative 'axiomatic' characterization
 might be possible by starting from axiomatic definition of
 $\Space{R}$ and defining $\Space{Q}$ as a certain subset.
+
 \end{plSection}%{\texorpdfstring{$\Space{Q}$}{Q} as a subset of \texorpdfstring{$\Space{R}$}{R}}
 %-----------------------------------------------------------------
 \begin{plSection}{Equivalence classes of integer pairs}
