--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5124,6 +5124,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
     url = {https://en.wikipedia.org/w/index.php?title=International_System_of_Units},
     }
     
+@online{wiki:GroupLike,
+    author = "{Wikipedia}",
+    title = "Algebraic Structure: one set with operations",
+    url = "https://en.wikipedia.org/wiki/Algebraic_structure#One_set_with_operations",
+  }
 @Online{wiki:LieGroup,
   author = {Wikipedia},
   title  = {Lie group},
@@ -5136,6 +5141,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Linear_algebraic_group},
 }
 
+@online{wiki:Monoid,
+    author = "{Wikipedia}",
+    title = "Monoid",
+    url = "https://en.wikipedia.org/w/index.php?title=Monoid",
+  }
+  
 @Online{wiki:PairwiseSummation,
   author = {Wikipedia},
   title  = {Pairwise summation},
