--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4098,6 +4098,9 @@ RawFeature={
 
 \NewDocumentCommand{\Pseudocode}{m}{\mathsfup{#1}}
 
+\NewDocumentCommand{\Add}{m}{\mathsf{+}_{\Space{#1}}}
+\NewDocumentCommand{\Mul}{m}{\mathsf{\times}_{\Space{#1}}}
+\NewDocumentCommand{\Ide}{m}{\mathsf{identity}_{#1}}
 \DeclareMathOperator{\domain}{\Pseudocode{domain}}
 \DeclareMathOperator{\codomain}{\Pseudocode{codomain}}
 % \DeclareMathOperator{\domain}{\Set{Dom}}
