--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -9,7 +9,7 @@
 % Normal key format: Author:year:TitleKey, where Author andd title
 % are in CamelCase; year is 4 digit.
 %
-% Online encyclopedia format: enclyopdiaKey:TitleKey
+% Online encyclopedia format: encyclopdiaKey:TitleKey
 %
 % Generally omit year, urldate, lastaccessed, etc., for online
 % entries, unless specific date version is known to be needed.
@@ -1866,6 +1866,26 @@ url={https://www.fontlab.com/},
   year    = {1992},
 }
 
+@book{GoslingEtAl:2021:JLS16,
+title = {{The Java Language Specification}},
+subtitle = {{Java SE 16 Edition}},
+author={James Gosling
+and
+Bill Joy
+and
+Guy Steele
+and
+Gilad Bracha
+and
+Alex Buckley
+and
+Daniel Smith
+and
+Gavin Bierman},
+year={2021},
+url={https://docs.oracle.com/javase/specs/},
+}
+
 @InCollection{Griewank:1989,
   author    = {A. Griewank},
   booktitle = {Mathematical Programming: recent developments and applications},
@@ -2960,6 +2980,22 @@ url = {https://raphlinus.github.io/curves/2021/03/11/bezier-fitting.html},
   title  = {Incanter},
   url    = {http://incanter.org},
   year   = {2011},
+}
+
+@book{LindholmEtAl:2021:JVMS16,
+title = {{The Java Virtual Machine Specification}},
+subtitle = {{Java SE 16 Edition}},
+author={Tim Lindholm
+and
+Frank Yellin
+and
+Gilad Bracha
+and
+Alex Buckley
+and
+Daniel Smith},
+year={2021},
+url={https://docs.oracle.com/javase/specs/},
 }
 
 @MastersThesis{Longabaugh:1992:CoordFree,
