--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4284,6 +4284,7 @@ both kinds of numbers in a single system are considered.},
   volume  = {5},
   journal = {Java Report},
   year    = {2000},
+  url = {http://www.gotw.ca/publications/c_family_interview.htm},
 }
 
 @article{RoddTornqkvist:2009:LMSStyleGuide,
