--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3971,6 +3971,11 @@ and no access to mantissa or exponent is necessary.
   year   = {2002},
 }
 
+@online{OpenJDK:JDK,
+title={Source: {openjdk/jdk}},
+url={https://github.com/openjdk/jdk},
+}
+
 @Online{OsheimEtal:2019:Spire,
   author = {Erik Osheim and Tom Switzer and R\"{u}diger Klaehn and Denis Rosset},
   title  = {Spire: Powerful new number types and numeric abstractions for Scala},
