ref; minor macro updates

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5368,6 +5368,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Ring_(mathematics)},
 }
 
+@online{wiki:Semigroup,
+    author = "{Wikipedia}",
+    title = "Semigroup",
+    url = "https://en.wikipedia.org/w/index.php?title=Semigroup",
+  }
+
 @Online{wiki:Semiring,
   author = {{Wikipedia}},
   title  = {Semiring},
