--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4077,6 +4077,7 @@ RawFeature={
 \NewDocumentCommand{\Set}{m}{\symscr{#1}}
 \NewDocumentCommand{\Space}{m}{\symbb{#1}}
 \NewDocumentCommand{\Naturals}{}{\Space{N}}
+\NewDocumentCommand{\NatMod}{m m}{\Space{N}{\mathsf [#1, #2]}}
 \NewDocumentCommand{\Integers}{}{\Space{Z}}
 \NewDocumentCommand{\Reals}{}{\Space{R}}
 \NewDocumentCommand{\Quaternions}{}{\Space{Q}}
@@ -4099,13 +4100,13 @@ RawFeature={
 \NewDocumentCommand{\Pseudocode}{m}{\mathsfup{#1}}
 
 % field operations
-\NewDocumentCommand{\Add}{m}{\mathsf{+}_{\Space{#1}}}
-\NewDocumentCommand{\Sub}{m}{\mathsf{-}_{\Space{#1}}}
-\NewDocumentCommand{\Mul}{m}{\mathsf{\times}_{\Space{#1}}}
-\NewDocumentCommand{\Div}{m}{\mathsf{\div}_{\Space{#1}}}
-\NewDocumentCommand{\Ide}{m}{\mathsf{identity}_{\Space{#1}}}
-\NewDocumentCommand{\One}{m}{\mathsf{1}_{\Space{#1}}}
-\NewDocumentCommand{\Zero}{m}{\mathsf{0}_{\Space{#1}}}
+\NewDocumentCommand{\Add}{m}{\mathsf{+}_{#1}}
+\NewDocumentCommand{\Sub}{m}{\mathsf{-}_{#1}}
+\NewDocumentCommand{\Mul}{m}{\mathsf{\times}_{#1}}
+\NewDocumentCommand{\Div}{m}{\mathsf{\div}_{#1}}
+\NewDocumentCommand{\Ide}{m}{\mathsf{identity}_{#1}}
+\NewDocumentCommand{\One}{m}{\mathsf{1}_{#1}}
+\NewDocumentCommand{\Zero}{m}{\mathsf{0}_{#1}}
 
 \DeclareMathOperator{\domain}{\Pseudocode{domain}}
 \DeclareMathOperator{\codomain}{\Pseudocode{codomain}}
