java unsigned ref

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2348,6 +2348,13 @@ url={https://dspace.mit.edu/handle/1721.1/6060},
   year          = {1994},
 }
 
+@online{JDK-4879804,
+author={Ranjith Mandala and Joe Darcy},
+year={2003},
+title={JDK-4879804: unsigned data types in Java},
+url={ttps://bugs.openjdk.java.net/browse/JDK-4879804},
+}
+
 @Book{Jech:2003:SetTheory,
   author    = {Jech, Thomas},
   title     = {Set Theory: The Third Millennium Edition},
