need to fix breakable option for plChunk environments

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5340,6 +5340,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Mathematical_structure},
 }
 
+@online{wiki:NegativeNumber,
+    author = "{Wikipedia}",
+    title = "Negative number",
+    url = "https://en.wikipedia.org/w/index.php?title=Negative_number",
+  }
 @Online{wiki:NewtonPolynomial,
   author = {Wikipedia},
   title  = {Newton polynomial},
