--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -5111,7 +5111,7 @@ citecolor=citecolor,
  ChunkBackgroundColor=code}
 
 
-\plNewChunk[][]
+\plNewChunk[][]%[breakable=false]
 {ChunkType=algorithm,
  ChunkBackgroundColor=codeBackground,
  ChunkParent=plCode,
