--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -898,6 +898,12 @@ title={Destructuring in Clojure},
 url={https://clojure.org/guides/destructuring},
 }
 
+@online{Clojure:Multimethods,
+author={{clojure.org}},
+title={Multimethods and Hierarchies},
+url={https://clojure.org/reference/multimethods},
+}
+
 @Online{Clojuredocs:2012,
   author = {{{ClojureDocs} community}},
   title  = {clojuredocs.org},
